Notebook committed for DS2: indian_liver_patient: KNN
Link: https://www.kaggle.com/uciml/indian-liver-patient-records/

--- a/src/HW1_Probably_Interesting_Data_KNNClassifier_IndianLiverPatient.ipynb
+++ b/src/HW1_Probably_Interesting_Data_KNNClassifier_IndianLiverPatient.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,16 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"C:\\\\Users\\\\Pushkar\\\\OneDrive - The University of Kansas\\\\ML\\\\H1\\\\indian-liver-patient-records\\\\indian_liver_patient.csv\")"
+    "df = pd.read_csv ('../data/indian_liver_patient.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "4      2.4                        0.40        1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "312      4.8                         NaN        2  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "4      2.4                        0.40        1  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
