Notebook committed for DS2: indian_liver_patient: KNN
Updated code

--- a/src/HW1_Probably_Interesting_Data_KNNClassifier_IndianLiverPatient.ipynb
+++ b/src/HW1_Probably_Interesting_Data_KNNClassifier_IndianLiverPatient.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "4      2.4                        0.40        1  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "312      4.8                         NaN        2  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -464,19 +464,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Pushkar\\Anaconda3\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\p860n111\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
       "  \n",
-      "C:\\Users\\Pushkar\\Anaconda3\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\p860n111\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "4      2.4                        0.40        1  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -678,13 +678,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Now, we have our dataset ready for KNN algoirthm.\n",
-    "#### Implementing KNN Alogorithm code start"
+    "### Now, we have our dataset ready for KNN algoirthm.\n",
+    "### Implementing KNN Alogorithm code start"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,22 +722,26 @@
    "source": [
     "#### Function Name: functionForKNNAlgo \n",
     "#### Purpose: Function to implement KNN algorithm and prints the k nearest neighbors and predicted class of the test data.\n",
-    "#### Input : Value of K, Training Dataset & Testing Dataset\n",
+    "#### Input : Value of K, Training Dataset, Testing Dataset and Auto/manual i.e., whether value of k has to be auto generated or         manually inputted by the user\n",
     "#### Output: Prints the k nearest neighbors and predicted class of the test data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function for the KNN algorithm\n",
     "\n",
-    "def functionForKNNAlgo(k, trainingDataSet, testDataSet):\n",
+    "def functionForKNNAlgo(k, trainingDataSet, testDataSet, autoOrManualValueOfK):\n",
     "    \n",
     "    listDistances = {}  # list created to store the distances of each of the test and the training dataset\n",
     "    varNumberOfColumnsTestDS = testDataSet.shape[1]  # to store the number of columns of the test dataset\n",
+    "    \n",
+    "    if autoOrManualValueOfK=='auto' or autoOrManualValueOfK=='Auto' or autoOrManualValueOfK=='AUTO':\n",
+    "        k =  roundUpToLowestodd(math.sqrt(len(trainingDataSet)))\n",
+    "        print(\"The auto value selected for k is--->\", k)\n",
     "    \n",
     "    for tempCol in range(len(trainingDataSet)):\n",
     "        localDistance = functionToCalEuclideanDistance(trainingDataSet.iloc[tempCol],testDataSet,  varNumberOfColumnsTestDS)\n",
@@ -772,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,8 +794,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Function to calculate the nearest odd integer (helpfull in finding the auto generated value of k from the square root of number of records of training dataset.\n",
+    "#### Function Name: roundUpToLowestodd\n",
+    "#### Input : varSqRootNoTrainDS (square root of number of records in training dataset\n",
+    "#### Returns: Nearest odd integer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def roundUpToLowestodd(varSqRootNoTrainDS):\n",
+    "    varTempOdd = int(np.floor(varSqRootNoTrainDS))\n",
+    "    return varTempOdd - 1 if varTempOdd % 2 == 0 else varTempOdd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,8 +834,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -825,12 +852,32 @@
     "# taking the value of k as 3\n",
     "k = 3 \n",
     "# Passing the values to the KNN function\n",
-    "functionForKNNAlgo(k,df, testDF )\n"
+    "functionForKNNAlgo(k,df, testDF, 'manual' )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The auto value selected for k is---> 23\n",
+      "The value of K--> 23  and the nearest neighbours are--->  [1, 196, 79, 341, 415, 172, 186, 459, 251, 549, 573, 42, 162, 188, 407, 306, 353, 20, 126, 492, 311, 417, 575]\n",
+      "The class or output is---> 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Passing the values to the KNN function and passing auto i.e. value of k will get autogenerated\n",
+    "functionForKNNAlgo(0,df, testDF, 'auto' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +893,7 @@
     "# taking the value of k as 5\n",
     "k = 5 \n",
     "# Passing the values to the KNN function\n",
-    "functionForKNNAlgo(k,df, testDF )\n"
+    "functionForKNNAlgo(k,df, testDF, 'manual' )\n"
    ]
   },
   {
@@ -873,7 +920,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
