--- a/notebooks/knn.ipynb
+++ b/notebooks/knn.ipynb
@@ -9,18 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "pd.options.mode.chained_assignment = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv ('../data/indian_liver_patient.csv')"
@@ -28,8 +33,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -163,7 +170,7 @@
        "4      2.4                        0.40        1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,8 +188,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -213,8 +222,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -233,7 +244,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,8 +262,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -369,7 +382,7 @@
        "312      4.8                         NaN        2  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,8 +394,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# replacing the NAN values with the mean of the column\n",
@@ -391,8 +406,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -411,7 +428,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,8 +446,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -464,26 +483,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\p860n111\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \n",
-      "C:\\Users\\p860n111\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
-     ]
-    }
-   ],
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "# converting the datatype of Gender column to int and encoding Male as 1 and Female as 2.\n",
     "df.Gender[df.Gender == 'Male'] = 1\n",
@@ -492,8 +496,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -627,7 +633,7 @@
        "4      2.4                        0.40        1  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,8 +644,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# converting the Gender dataype from object to int\n",
@@ -648,15 +656,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Age                             int64\n",
-      "Gender                          int32\n",
+      "Gender                          int64\n",
       "Total_Bilirubin               float64\n",
       "Direct_Bilirubin              float64\n",
       "Alkaline_Phosphotase            int64\n",
@@ -684,8 +694,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import math\n",
@@ -704,8 +716,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def functionToCalEuclideanDistance(dataPointTrain, dataPointTest, sizeOfData):\n",
@@ -728,8 +742,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Function for the KNN algorithm\n",
@@ -776,8 +792,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def functionToFindTheClass(listOfNeighbors, trainingDataSet):\n",
@@ -805,8 +823,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def roundUpToLowestodd(varSqRootNoTrainDS):\n",
@@ -816,8 +836,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "testDataSet = [[62,1,10.9,5.5,699,64,100,7.5,3.2,0.74]]"
@@ -825,8 +847,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "testDF = pd.DataFrame(testDataSet)"
@@ -834,8 +858,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -843,8 +868,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The value of K--> 3  and the nearest neighbours are--->  [1, 196, 79]\n",
-      "The class or output is---> 1.0\n"
+      "('The value of K-->', 3, ' and the nearest neighbours are---> ', [1, 196, 79])\n",
+      "('The class or output is--->', 1.0)\n"
      ]
     }
    ],
@@ -857,16 +882,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The auto value selected for k is---> 23\n",
-      "The value of K--> 23  and the nearest neighbours are--->  [1, 196, 79, 341, 415, 172, 186, 459, 251, 549, 573, 42, 162, 188, 407, 306, 353, 20, 126, 492, 311, 417, 575]\n",
-      "The class or output is---> 1.0\n"
+      "('The auto value selected for k is--->', 23)\n",
+      "('The value of K-->', 23, ' and the nearest neighbours are---> ', [1, 196, 79, 341, 415, 172, 186, 459, 251, 549, 573, 42, 162, 188, 407, 306, 353, 20, 126, 492, 311, 417, 575])\n",
+      "('The class or output is--->', 1.0)\n"
      ]
     }
    ],
@@ -877,15 +904,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The value of K--> 5  and the nearest neighbours are--->  [1, 196, 79, 341, 415]\n",
-      "The class or output is---> 1.0\n"
+      "('The value of K-->', 5, ' and the nearest neighbours are---> ', [1, 196, 79, 341, 415])\n",
+      "('The class or output is--->', 1.0)\n"
      ]
     }
    ],
@@ -895,32 +924,25 @@
     "# Passing the values to the KNN function\n",
     "functionForKNNAlgo(k,df, testDF, 'manual' )\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
